fixed thumb spacing close #14

--- a/source/stylesheets/media_queries.css.scss
+++ b/source/stylesheets/media_queries.css.scss
@@ -225,6 +225,11 @@
 		width: 97.5%;
 		margin-left: 1.25%;
 	}
+	
+	.details {
+		margin-top: -40px;
+	
+		}
 }
 
 @media screen and (max-width: 768px) {
@@ -453,6 +458,8 @@
 		font-size: 1.25em;
 		padding: 0 10px;
 	}
+	
+	
 }
 
 @media screen and (max-width: 480px) {
